Bug 1427233 - BinParse checks whether the argument is an ArrayBuffer;r=jandem

MozReview-Commit-ID: 9ztVYwYtK0E